--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
+    "@angular/animations": "^15.2.10",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
@@ -29,6 +29,7 @@
     "cli": "^1.0.1",
     "firebase": "^10.5.2",
     "ng": "^0.0.0",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.3",
     "tslib": "^2.3.0",
