--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.10",
+    "@angular/cdk": "~15.2.9",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/fire": "^16.0.0",
     "@angular/forms": "^15.1.0",
+    "@angular/material": "~15.2.9",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
+
     "@angular/router": "^15.1.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -29,6 +32,7 @@
     "cli": "^1.0.1",
     "firebase": "^10.5.2",
     "ng": "^0.0.0",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.3",
