--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/material": "~15.2.9",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
-
     "@angular/router": "^15.1.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -31,6 +30,8 @@
     "bootstrap": "^5.3.0-alpha3",
     "cli": "^1.0.1",
     "firebase": "^10.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "ng": "^0.0.0",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^16.2.0",
@@ -44,6 +45,7 @@
     "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
