--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "~15.2.9",
+    "@angular/cdk": "~16.2.14",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.12",
-    "@angular/material": "~15.2.9",
+    "@angular/material": "~16.2.14",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
-    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "cli": "^1.0.1",
     "firebase": "^10.5.2",
+    "jwt-decode": "^4.0.0",
     "ng": "^0.0.0",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^16.2.0",
