--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,9 @@
               }
             ],
             "styles": [
-              "node_modules\\bootstrap\\dist\\css\\bootstrap.min.css",
-              "src/styles.css",
-              "node_modules\\ngx-toastr\\toastr.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
